--- a/index.html
+++ b/index.html
@@ -76,54 +76,6 @@
             color: #ffffff;
         }
 
-        .output_block {
-            background-color: #ffffff;
-            padding: 15px;
-            margin: 15px;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            transition: transform 0.2s ease-in-out;
-        }
-
-        .output_block:hover {
-            transform: translateY(-5px);
-        }
-
-        .title {
-            font-size: 1.2rem;
-            font-weight: bold;
-            color: #333;
-        }
-
-        .abstract {
-            color: #555;
-            font-size: 1rem;
-            margin-top: 10px;
-            cursor: pointer;
-        }
-
-        .date {
-            color: #777;
-            font-size: 0.9rem;
-            margin-top: 5px;
-        }
-
-        button {
-            padding: 10px 20px;
-            background-color: #0077cc;
-            color: #ffffff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            margin-top: 15px;
-        }
-
-        button:hover {
-            background-color: #005fa3;
-        }
-
         @media (max-width: 768px) {
             #headBlock {
                 padding: 15px;
@@ -140,10 +92,6 @@
             #links {
                 gap: 10px;
             }
-
-            .output_block {
-                padding: 10px;
-            }
         }
     </style>
 </head>
@@ -159,59 +107,79 @@
 <div id="descEN" class="accroche"></div>
 <div id="descFR" class="accroche"></div>
 
-<div id="publications"></div>
-
 <script src="./configuration.js"></script>
+
 <script>
     document.getElementById('name').innerText = config.name;
 
     const linksDiv = document.getElementById("links");
-    config.links.forEach(link => {
-        const linkElement = document.createElement("a");
-        linkElement.className = "link";
-        linkElement.href = link.url;
-        linkElement.target = "_blank";
-        linkElement.innerText = link.label;
-        linksDiv.appendChild(linkElement);
-    });
+
+    const addLink = (linkConfig) => {
+        const rubrique = document.createElement("div");
+        rubrique.className = "link";
+        rubrique.innerHTML = `${linkConfig.label}: <a target="_blank" href="${linkConfig.url}">${linkConfig.value}</a>`;
+        linksDiv.append(rubrique);
+    };
+
+    config.links.forEach(link => addLink(link));
+
+    const email = document.createElement("div");
+    email.className = "link";
+    email.innerHTML = `email: ${config.email.name}<br>${config.email.domain}`;
+    linksDiv.append(email);
 
     document.getElementById('descEN').innerText = config.description.EN.short;
     document.getElementById('descFR').innerText = config.description.FR.short;
 
     // Function to load publications
-    const getData = (val) => {
-        const query = encodeURIComponent(val);
-        fetch(`https://api.archives-ouvertes.fr/search/?q=${query}&wt=json&rows=10000&fl=docType_s,docid,authFullName_s,label_s,abstract_s,producedDate_s,conferenceTitle_s,language_s,subTitle_s,title_s,doiId_s,halId_s,journalTitle_s`)
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Failed to fetch data');
-                }
-                return response.json();
-            })
-            .then(data => {
-                const publicationsDiv = document.getElementById("publications");
-                publicationsDiv.innerHTML = "";
-                data.response.docs.forEach(doc => {
-                    if (doc.title_s && doc.producedDate_s && doc.docType_s) {
-                        const block = document.createElement("div");
-                        block.className = "output_block";
-                        block.innerHTML = `
-                            <div class='title'>${doc.title_s[0] || 'No Title'}</div>
-                            <div class='date'>${doc.producedDate_s || 'No Date'} - ${doc.docType_s || 'No Type'}</div>
-                        `;
-                        publicationsDiv.appendChild(block);
-                    }
-                });
-            })
-            .catch(error => {
-                console.error("Error fetching data:", error);
-            });
-    };
+    const getdata = (val) =>
+        fetch(
+            `https://api.archives-ouvertes.fr/search/?q=${val}&wt=json&rows=10000&fl=docType_s,docid,authFullName_s,label_s,abstract_s,producedDate_s,conferenceTitle_s,language_s,subTitle_s,title_s,doiId_s,halId_s,journalTitle_s`
+        )
+            .then(response => response.json())
+            .then(r => r.response.docs)
+            .then(r => {
+                const siftData = (data, authName) => {
+                    const authLower = authName.toLowerCase();
+                    const sifted = [];
+                    data.forEach(d => {
+                        const authorMap = {};
+                        d.authFullName_s.forEach(auth => authorMap[auth.toLowerCase()] = 1);
+                        if (authorMap.hasOwnProperty(authLower)) {
+                            d.date = new Date(d.producedDate_s);
+                            sifted.push(d);
+                        }
+                    });
+                    return sifted.sort((a, b) => b.date - a.date);
+                };
 
-    getData(config.name);
+                const createblock = (output) => {
+                    const cont = document.createElement("div");
+                    cont.className = "output_block";
+                    const title = document.createElement("div");
+                    title.className = "title";
+                    title.innerText = output.title_s[0] || 'No Title';
+                    cont.append(title);
+
+                    const authors = document.createElement("div");
+                    authors.innerText = output.authFullName_s.join(", ");
+                    cont.append(authors);
+
+                    const date = document.createElement("div");
+                    date.className = "date";
+                    date.innerText = `${output.producedDate_s} - ${output.docType_s}`;
+                    cont.append(date);
+
+                    document.body.append(cont);
+                };
+
+                const sifted = siftData(r, val);
+                sifted.forEach(d => createblock(d));
+            });
+
+    getdata(config.name);
 </script>
 
 </body>
 </html>
-
 
